--- a/README
+++ b/README
@@ -2,14 +2,21 @@
 Stack: Go (Fiber, GORM, JWT) + PostgreSQL + Next.js
 
 ---
+# 0️ Environment variables
+    DB_HOST=postgres
+    DB_USER=postgres
+    DB_PASSWORD=279111
+    DB_NAME=notesdb
+    DB_PORT=5432
+    JWT_SECRET=11092708
 
-# 1️⃣ How to run backend
+# 1️ How to run backend
     cd backend
     go run main.go
 
     Stop backend: tekan Ctrl + C
 
-# 2️⃣ How to run database (PostgreSQL)
+# 2️ How to run database (PostgreSQL)
     Start all services in detached mode:
         docker-compose up -d
 
@@ -38,7 +45,7 @@ Stack: Go (Fiber, GORM, JWT) + PostgreSQL + Next.js
     Exit psql:
         \q
     
-# 3️⃣ How to run frontend
+# 3️ How to run frontend
         cd frontend
         npm install
         npm run dev
@@ -49,7 +56,7 @@ Stack: Go (Fiber, GORM, JWT) + PostgreSQL + Next.js
         npm run build
         npm run start
 
-# 4️⃣ Viewing logs (live)
+# 4️ Viewing logs (live)
     Backend logs:
         docker-compose logs -f backend
     
@@ -61,7 +68,15 @@ Stack: Go (Fiber, GORM, JWT) + PostgreSQL + Next.js
 
 💡 Tip: Add --tail 100 to see 100 on behind.
 
-# 5️⃣ Additional tips
+# 5 API Endpoints
+    POST /api/register      → Register new user
+    POST /api/login         → Login user
+    GET /api/notes          → Get all notes
+    POST /api/notes         → Create note
+    PUT /api/notes/:id      → Update note
+    DELETE /api/notes/:id   → Delete note
+
+# 6 Additional tips
     Check ports in use:
         netstat -ano | findstr :<port_number>
     
@@ -73,3 +88,8 @@ Stack: Go (Fiber, GORM, JWT) + PostgreSQL + Next.js
     
     Remove unused Docker containers/images:
         docker system prune
+
+💡 Note:
+Frontend deployed on Vercel currently points to local backend.
+Some features like register/login may not work on Vercel deployment.
+To fully test these features, run backend locally as described above.
