--- a/README
+++ b/README
@@ -1,6 +1,5 @@
 # Notes Sharing App
 Stack: Go (Fiber, GORM, JWT) + PostgreSQL + Next.js
-
 ---
 # 0️ Environment variables
     DB_HOST=postgres
@@ -9,14 +8,8 @@ Stack: Go (Fiber, GORM, JWT) + PostgreSQL + Next.js
     DB_NAME=notesdb
     DB_PORT=5432
     JWT_SECRET=11092708
-
-# 1️ How to run backend
-    cd backend
-    go run main.go
-
-    Stop backend: tekan Ctrl + C
-
-# 2️ How to run database (PostgreSQL)
+---
+# 1 How to run database (PostgreSQL)
     Start all services in detached mode:
         docker-compose up -d
 
@@ -44,18 +37,32 @@ Stack: Go (Fiber, GORM, JWT) + PostgreSQL + Next.js
 
     Exit psql:
         \q
-    
+---
+# 2 How to run backend
+    Run backend:
+        cd backend
+        go run main.go
+
+    Stop backend: press Ctrl + C
+---
+
+⚠️ Note: Running go run main.go outside Docker will result in an error because the postgres hostname is not recognized. Use Docker Compose to run the backend and database.
+
+---
 # 3️ How to run frontend
+    run frontend:
         cd frontend
         npm install
         npm run dev
     
-    Stop frontend: tekan Ctrl + C
+    Stop frontend: press Ctrl + C
 
     Build & run for production:
         npm run build
         npm run start
-
+---
+⚠️ Note: The frontend is also connected to the backend via the Docker network.
+---
 # 4️ Viewing logs (live)
     Backend logs:
         docker-compose logs -f backend
@@ -65,9 +72,11 @@ Stack: Go (Fiber, GORM, JWT) + PostgreSQL + Next.js
     
     Database logs:
         docker-compose logs -f postgres
+---
 
 💡 Tip: Add --tail 100 to see 100 on behind.
 
+---
 # 5 API Endpoints
     POST /api/register      → Register new user
     POST /api/login         → Login user
@@ -75,7 +84,7 @@ Stack: Go (Fiber, GORM, JWT) + PostgreSQL + Next.js
     POST /api/notes         → Create note
     PUT /api/notes/:id      → Update note
     DELETE /api/notes/:id   → Delete note
-
+---
 # 6 Additional tips
     Check ports in use:
         netstat -ano | findstr :<port_number>
@@ -88,8 +97,8 @@ Stack: Go (Fiber, GORM, JWT) + PostgreSQL + Next.js
     
     Remove unused Docker containers/images:
         docker system prune
+---
 
-💡 Note:
-Frontend deployed on Vercel currently points to local backend.
-Some features like register/login may not work on Vercel deployment.
-To fully test these features, run backend locally as described above.
+💡 Note: Frontend deployed on Vercel currently points to local backend. Some features like register/login may not work on Vercel deployment. To fully test these features, run backend locally as described above.
+
+---
