adding CRUD logs and edit README file

--- a/README
+++ b/README
@@ -126,21 +126,47 @@
 
 Overview image:
 
+Home page
 ![public access](frontend/public/overview/home.png)
-![Add and crop image](frontend/public/overview/add_crop_image.png)
-![Add note](frontend/public/overview/add_note.png)
-![Dashboard](frontend/public/overview/dashboard.png)
-![edit](frontend/public/overview/edit.png)
-![Delete pop up](frontend/public/overview/delete_notification.png)
+
+Login page
 ![Login page](frontend/public/overview/login_page.png)
-![Logout pop up](frontend/public/overview/logout_pop_up.png)
-![Long note](frontend/public/overview/long_note.png)
-![No notes](frontend/public/overview/no_data.png)
-![Sharing Notes Dashboard](frontend/public/overview/public_dashboard.png)
+
+Register page
 ![Register page](frontend/public/overview/register_page.png)
-![Search for note](frontend/public/overview/search.png)
+
+Notes private dashboard
+![Dashboard](frontend/public/overview/dashboard.png)
+
+Note public dashboard
+![Sharing Notes Dashboard](frontend/public/overview/public_dashboard.png)
+
+No notes or first time
+![No notes](frontend/public/overview/no_data.png)
+
+Add new note
+![Add note](frontend/public/overview/add_note.png)
+
+Add and crop image
+![Add and crop image](frontend/public/overview/add_crop_image.png)
+
+Note edit
+![edit](frontend/public/overview/edit.png)
+
+Delete note pop up
+![Delete pop up](frontend/public/overview/delete_notification.png)
+
+Long note
+![Long note](frontend/public/overview/long_note.png)
+
+Short note
 ![Short note](frontend/public/overview/short_note.png)
 
+Search for notes
+![Search for note](frontend/public/overview/search.png)
+
+Log out pop up
+![Logout pop up](frontend/public/overview/logout_pop_up.png)
 ---
 
 File [backend-log.txt](./backend-log.txt) to see backend logs.
