--- a/README
+++ b/README
@@ -127,46 +127,46 @@
 Overview image:
 
 Home page
-![Preview](https://github.com/NasywaFA/./overview/home.png)
+![Preview](https://github.com/NasywaFA/note-sharing-app/tree/main/overview/home.png)
 
 Login page
-![Preview](https://github.com/NasywaFA/./overview/login_page.png)
+![Preview](https://github.com/NasywaFA/note-sharing-app/tree/main/overview/login_page.png)
 
 Register page
-![Preview](https://github.com/NasywaFA/./overview/register_page.png)
+![Preview](https://github.com/NasywaFA/note-sharing-app/tree/main/overview/register_page.png)
 
 Notes private dashboard
-![Preview](https://github.com/NasywaFA/./overview/dashboard.png)
+![Preview](https://github.com/NasywaFA/note-sharing-app/tree/main/overview/dashboard.png)
 
 Note public dashboard
-![Preview](https://github.com/NasywaFA/./overview/public_dashboard.png)
+![Preview](https://github.com/NasywaFA/note-sharing-app/tree/main/overview/public_dashboard.png)
 
 No notes or first time
-![Preview](https://github.com/NasywaFA/./overview/no_data.png)
+![Preview](https://github.com/NasywaFA/note-sharing-app/tree/main/overview/no_data.png)
 
 Add new note
-![Preview](https://github.com/NasywaFA/./overview/add_note.png)
+![Preview](https://github.com/NasywaFA/note-sharing-app/tree/main/overview/add_note.png)
 
 Add and crop image
-![Preview](https://github.com/NasywaFA/./overview/add_crop_image.png)
+![Preview](https://github.com/NasywaFA/note-sharing-app/tree/main/overview/add_crop_image.png)
 
 Note edit
-![Preview](https://github.com/NasywaFA/./overview/edit.png)
+![Preview](https://github.com/NasywaFA/note-sharing-app/tree/main/overview/edit.png)
 
 Delete note pop up
-![Preview](https://github.com/NasywaFA/./overview/delete_notification.png)
+![Preview](https://github.com/NasywaFA/note-sharing-app/tree/main/overview/delete_notification.png)
 
 Long note
-![Preview](https://github.com/NasywaFA/./overview/long_note.png)
+![Preview](https://github.com/NasywaFA/note-sharing-app/tree/main/overview/long_note.png)
 
 Short note
-![Preview](https://github.com/NasywaFA/./overview/short_note.png)
+![Preview](https://github.com/NasywaFA/note-sharing-app/tree/main/overview/short_note.png)
 
 Search for notes
-![Preview](https://github.com/NasywaFA/./overview/search.png)
+![Preview](https://github.com/NasywaFA/note-sharing-app/tree/main/overview/search.png)
 
 Log out pop up
-![Preview](https://github.com/NasywaFA/./overview/logout_pop_up.png)
+![Preview](https://github.com/NasywaFA/note-sharing-app/tree/main/overview/logout_pop_up.png)
 ---
 
-File [backend-log.txt](./backend-log.txt) to see backend logs.
+File [backend-log.txt](https://github.com/NasywaFA/note-sharing-app/blob/main/backend-log.txt) to see backend logs.
