--- a/README
+++ b/README
@@ -127,46 +127,46 @@
 Overview image:
 
 Home page
-![Preview](https://raw.githubusercontent.com/NasywaFA/note-sharing-app/main/overview/home.png)
+![home](overview/home.png)
 
 Login page
-![Preview](https://raw.githubusercontent.com/NasywaFA/note-sharing-app/main/overview/login_page.png)
+![login page](overview/login_page.png)
 
 Register page
-![Preview](https://raw.githubusercontent.com/NasywaFA/note-sharing-app/main/overview/register_page.png)
+![register page](overview/register_page.png)
 
 Notes private dashboard
-![Preview](https://raw.githubusercontent.com/NasywaFA/note-sharing-app/main/overview/dashboard.png)
+![private dashboard](overview/dashboard.png)
 
 Note public dashboard
-![Preview](https://raw.githubusercontent.com/NasywaFA/note-sharing-app/main/overview/public_dashboard.png)
+![public dashboard](overview/public_dashboard.png)
 
 No notes or first time
-![Preview](https://raw.githubusercontent.com/NasywaFA/note-sharing-app/main/overview/no_data.png)
+![no notes](overview/no_data.png)
 
 Add new note
-![Preview](https://raw.githubusercontent.com/NasywaFA/note-sharing-app/main/overview/add_note.png)
+![add new note](overview/add_note.png)
 
 Add and crop image
-![Preview](https://raw.githubusercontent.com/NasywaFA/note-sharing-app/main/overview/add_crop_image.png)
+![add crop image](overview/add_crop_image.png)
 
 Note edit
-![Preview](https://raw.githubusercontent.com/NasywaFA/note-sharing-app/main/overview/edit.png)
+![edit](overview/edit.png)
 
 Delete note pop up
-![Preview](https://raw.githubusercontent.com/NasywaFA/note-sharing-app/main/overview/delete_notification.png)
+![delete notification](overview/delete_notification.png)
 
 Long note
-![Preview](https://raw.githubusercontent.com/NasywaFA/note-sharing-app/main/overview/long_note.png)
+![long note](overview/long_note.png)
 
 Short note
-![Preview](https://raw.githubusercontent.com/NasywaFA/note-sharing-app/main/overview/short_note.png)
+![short note](overview/short_note.png)
 
 Search for notes
-![Preview](https://raw.githubusercontent.com/NasywaFA/note-sharing-app/main/overview/search.png)
+![search bar](overview/search.png)
 
 Log out pop up
-![Preview](https://raw.githubusercontent.com/NasywaFA/note-sharing-app/main/overview/logout_pop_up.png)
+![log out pop up](overview/logout_pop_up.png)
 ---
 
 File [backend-log.txt](https://github.com/NasywaFA/note-sharing-app/blob/main/backend-log.txt) to see backend logs.
